# calude-proxy

./: .dockerignore  .gitignore  API_SPEC_RESEARCH.md  Cargo.toml  Dockerfile  IMPLEMENTATION_SUMMARY.md  README.md  TESTING.md  config.example.yaml  docker-compose.yml  test_proxy.sh
.github/workflows/: release.yml  rust.yml
load/: k6.js
migrations/: 0001_initial_schema.sql  0002_create_admin_users.sql
src/: anthropic.rs  auth.rs  config.rs  dashboard.rs  domain.rs  error.rs  lib.rs  main.rs  provider.rs  routing.rs  server.rs
static/: app.js  styles.css
templates/: index.html  login.html
tests/: http_conformance.rs
tests/integration/: config_versioning_test.rs  health_check_test.rs  mod.rs
