[package]
name = "claude-code-proxy"
version = "0.2.0"
edition = "2021"
rust-version = "1.86"

[lib]
name = "claude_code_proxy"
path = "src/lib.rs"

[[bin]]
name = "claude-code-proxy"
path = "src/main.rs"

[dependencies]
arc-swap = "1.7"
async-stream = "0.3"
async-trait = "0.1"
axum = { version = "0.8", features = ["macros"] }
base64 = "0.22"
bytes = "1"
clap = { version = "4.5", features = ["derive", "env"] }
futures = "0.3"
globset = "0.4"
http = "1"
metrics = "0.24"
metrics-exporter-prometheus = { version = "0.18", default-features = false }
rand = "0.9"
rand_core = "0.6"
reqwest = { version = "0.13", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = { package = "serde_yaml_ng", version = "0.10" }
sha2 = "0.10"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "tls-native-tls"] }
subtle = "2.6"
thiserror = "2"
tiktoken-rs = "0.12"
tokio = { version = "1", features = ["full"] }
tower = { version = "0.5", features = ["limit", "load-shed", "timeout"] }
tower-http = { version = "0.6", features = ["catch-panic", "request-id", "trace", "limit", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1", features = ["v4", "serde"] }
argon2 = "0.5"
jsonwebtoken = "9"
tera = "1.19"
tower-cookies = "0.11"

[dev-dependencies]
http-body-util = "0.1"
mockito = "1"
serde_json = "1"
tempfile = "3"
tokio-test = "0.4"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true

[[test]]
name = "integration"
path = "tests/integration/mod.rs"

[[test]]
name = "config_versioning"
path = "tests/integration/config_versioning_test.rs"

[[test]]
name = "health_check"
path = "tests/integration/health_check_test.rs"